:bug: fix: artist delete method needs to delete relationship from all other classes